扩大timeout
(cherry picked from commit 6243b5d9c8d7b10fab0d7390f826f82083c80415)